[package]
name = "note_take"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "*", default-features = false, features = [
  "pancurses-backend",
] }
uuid = { version = "1.3.1", features = ["v4"] }
